# Slicer_test

./: CMakeLists.txt  README.md
replaceAll/: CMakeLists.txt  replaceAll.py
replaceAll/Resources/UI/: replaceAll.ui
replaceAll/replaceAll_utils/: replaceAll_WSL.py  requirement.py
replaceAllCLI/: CMakeLists.txt  replaceAllCLI.py  replaceAllCLI.xml
